--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,13 @@
+configurations {
+    jaxb
+}
+
 buildscript {
 	ext {
 		artifactId = 'merchant-gateway'
         artifactGroup = 'ru.all-recipes'
         artifactVersion = '0.1.0-SNAPSHOT'
-		springBootVersion = '1.5.10.RELEASE'
+		springBootVersion = '2.0.0.RELEASE'
 	}
 	repositories {
         mavenCentral()
@@ -12,7 +16,7 @@ buildscript {
         }
     }
 	dependencies {
-		classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
+		classpath "org.springframework.boot:spring-boot-gradle-plugin:2.0.0.RELEASE"
 		classpath "io.franzbecker:gradle-lombok:1.8"
 	}
 }
@@ -21,21 +25,54 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'io.franzbecker.gradle-lombok'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 apply plugin: 'checkstyle'
 apply plugin: 'findbugs'
 apply plugin: 'pmd'
-apply plugin: 'maven-publish'
-apply plugin: 'maven'
 
 repositories {
-    maven {	url "http://www.datanucleus.org/downloads/maven2/" }
+	mavenCentral()
 	mavenLocal()
-    mavenCentral()
 }
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
+task genJaxb {
+    ext.sourcesDir = "${buildDir}/generated-sources/jaxb"
+    ext.classesDir = "${buildDir}/classes/jaxb"
+    ext.schema = "https://web.rbsuat.com/ab/webservices/merchant-ws?wsdl=MerchantService.wsdl"
+
+    outputs.dir classesDir
+
+    doLast() {
+        project.ant {
+            taskdef name: "xjc", classname: "com.sun.tools.xjc.XJCTask",
+                    classpath: configurations.jaxb.asPath
+            mkdir(dir: sourcesDir)
+            mkdir(dir: classesDir)
+
+            xjc(destdir: sourcesDir, schema: schema, package: "ru.allrecipes.merchant.bank.alfabank.wsdl") {
+                arg(value: "-wsdl")
+                produces(dir: sourcesDir, includes: "**/*.java")
+            }
+
+            javac(destdir: classesDir, source: 1.8, target: 1.8, debug: true,
+                    debugLevel: "lines,vars,source",
+                    classpath: configurations.jaxb.asPath) {
+                src(path: sourcesDir)
+                include(name: "**/*.java")
+                include(name: "*.java")
+            }
+
+            copy(todir: classesDir) {
+                fileset(dir: sourcesDir, erroronmissingdir: false) {
+                    exclude(name: "**/*.java")
+                }
+            }
+        }
+    }
+}
 
 dependencies {
 	compile "org.springframework.boot:spring-boot-starter"
@@ -43,16 +80,22 @@ dependencies {
 	compile "org.springframework.boot:spring-boot-starter-web"
     compile "org.springframework.boot:spring-boot-starter-data-jpa"
 	compile "org.springframework.boot:spring-boot-starter-log4j2"
+	compile "org.springframework.ws:spring-ws-core"
 	compile "org.postgresql:postgresql:42.1.4"
 	compile "io.springfox:springfox-swagger2:2.6.1"
     compile "io.springfox:springfox-swagger-ui:2.6.1"
+    compile(files(genJaxb.classesDir).builtBy(genJaxb))
+    
+    jaxb "com.sun.xml.bind:jaxb-xjc:2.1.7"
 	
 	testCompile "org.springframework.boot:spring-boot-starter-test"
 }
 
-jar {
+bootJar {
     baseName = "${artifactId}"
     version =  "${artifactVersion}"
+
+    from genJaxb.classesDir
 }
 
 configurations {
@@ -96,6 +139,10 @@ task installAngular(type:Exec) {
 	} else {
 		commandLine "npm", "install"
 	}
+}
+
+task afterEclipseImport {
+    dependsOn genJaxb
 }
 
 eclipse {
