--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,10 @@ server:
     key-store: classpath:keystore.p12
     key-store-password: 123456
 security:
-  require-ssl: true  
+  require-ssl: true
+alfabank:
+  login: all_recipes_test-api
+  password: all_recipes_test*?1    
 spring:
   datasource:
     driverClassName: org.postgresql.Driver
