fixes #1. Replaces angular to jsp due to bugs while building angular
under vagrant ubuntu machine.

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ apply plugin: 'io.spring.dependency-management'
 apply plugin: 'checkstyle'
 apply plugin: 'findbugs'
 apply plugin: 'pmd'
+apply plugin: 'war'
 
 repositories {
 	mavenCentral()
@@ -75,6 +76,7 @@ dependencies {
     compile "io.springfox:springfox-swagger-ui:2.6.1"
     compile(files(wsimport.classesDir).builtBy(wsimport))
     compile('org.apache.tomcat.embed:tomcat-embed-jasper' ,'javax.servlet:jstl')
+    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
     
     //jaxb "com.sun.xml.bind:jaxb-xjc:2.1.7"
     jaxws "com.sun.xml.ws:jaxws-tools:2.1.4"
@@ -87,7 +89,7 @@ compileJava {
     source wsimport.destDir
 }
 
-bootJar {
+bootWar {
     baseName = "${artifactId}"
     version =  "${artifactVersion}"
     
@@ -104,36 +106,6 @@ sourceSets {
 		resources {
 			srcDirs = ["$webappDir/dist", "$projectDir/src/main/resources"]
 		}
-	}
-}
-
-processResources {
-	dependsOn "buildAngular"
-}
-
-task buildAngular(type:Exec) {
-	// installAngular should be run prior to this task
-	dependsOn "installAngular"
-	workingDir "$webappDir"
-	inputs.dir "$webappDir"
-	// Add task to the standard build group
-	group = BasePlugin.BUILD_GROUP
-	// ng doesn't exist as a file in windows -> ng.cmd
-	if (System.getProperty("os.name").toUpperCase().contains("WINDOWS")){
-		commandLine "ng.cmd", "build"
-	} else {
-		commandLine "ng", "build"
-	}
-}
- 
-task installAngular(type:Exec) {
-	workingDir "$webappDir"
-	inputs.dir "$webappDir"
-	group = BasePlugin.BUILD_GROUP
-	if (System.getProperty("os.name").toUpperCase().contains("WINDOWS")){
-		commandLine "npm.cmd", "install"
-	} else {
-		commandLine "npm", "install"
 	}
 }
 
